Fixewd the gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,9 +26,7 @@ h3 {
     letter-spacing: 2px;
     color: #252525;
 }
-.hidden-heading {
-    display: none;
-}
+
 /* Header */
 header {
     background-color: #ffffff;
@@ -97,7 +95,7 @@ main {
 #hero {
     height: 600px;
     width: 100%;
-    background: url("../images/hero-image.jpg") no-repeat center center/cover;
+    background: url("../images/hero-image.webp") no-repeat center center/cover;
     position: relative;
 }
 
@@ -146,7 +144,7 @@ main {
 }
 
 #circle-cover-bg {
-    background: url('../images/reasons-image.jpg') no-repeat top center / cover;
+    background: url('../images/reasons-image.webp') no-repeat top center / cover;
     height: 90vw;
     width: 90vw;
     margin-bottom: 20px;
@@ -161,43 +159,43 @@ main {
     align-items: center;
     justify-content: center;
 }
+
+/* Meetup Times section */
 #times {
-    background: url('../images/dublin-city.webp') no-repeat center / cover;
-    /* handles responsivity without the need for media query */
+    background: url('../images/dublin-city.webp') no-repeat center/cover;
+    /* Handles responsivity without the need for a media query */
     display: flex;
     flex-wrap: wrap;
 }
+
 #times div {
-    color:#fafafa;
-    background-color: rgba(0, 0, 0, 0.6);
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, .6);
     padding: 15px;
     text-align: center;
-    /* This will not wrap on screens of less than 400px wide. 
-    each div will expand to fill the available space on its row */
+    /* This will not wrap on screens of less than 400px wide.
+    Each div will expand to fill the available space on its row */
     flex-basis: 200px;
     flex-grow: 1;
-    /* Creates a grid of meetup times dives over the background image */
+    /* Creates a grid of meetup time divs over the background image */
     border: 2px solid white;
 }
+
 #times h3 {
-    color:#fafafa;
+    /* Override the heading colour set in general styles */
+    color: #fafafa;
+}
 
 /* Gallery page */
-
 #photos img {
     width: 100%;
     line-height: 1em;
-    
 }
+
 #photos {
     line-height: 0;
 }
 
-
-
-
-
-}
 /* Footer */
 #social-networks {
     text-align: center;
@@ -213,15 +211,12 @@ main {
     color: #3a3a3a;
 }
 
-/* Media query: Large or landscape phones /576 px and up) */
-
+/* Media query: large or landscape phones (576px and up) */
 @media screen and (min-width: 576px) {
     #photos {
         column-count: 2;
         column-gap: 0;
     }
-
-
 }
 
 /* Media query: tablets and larger (768px and up) */
@@ -283,11 +278,11 @@ main {
         text-align: end;
         align-self: flex-end;
     }
+
     /* Gallery */
     #photos {
         column-count: 3;
     }
-
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
@@ -295,9 +290,11 @@ main {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
+
     /* Gallery */
     #photos {
         column-count: 4;
+    }
 }
 
 @media screen and (min-width: 1200px) {    
